ShowHiddenFrames use in java_lang_StackTraceElement::fill_in appears broken

XMLWordPrintable

    • b13

        Came up during code review for JDK-8216308

        https://mail.openjdk.java.net/pipermail/hotspot-dev/2019-January/036217.html

            Symbol* source = Backtrace::get_source_file_name(holder, version);
            if (ShowHiddenFrames && source == NULL)
              source = vmSymbols::unknown_class_name();
            oop filename = StringTable::intern(source, CHECK);
            java_lang_StackTraceElement::set_fileName(element(), filename);

        There's no obvious connection between the use of ShowHiddenFrames and whether the frame for the current method is hidden.

              Assignee:
              Coleen Phillimore
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: