8216977: ShowHiddenFrames use in java_lang_StackTraceElement::fill_in appears broken

Return NULL source file and negative line number for hidden frames.

Reviewed-by: dholmes, hseigel